# libncot

./: .gitignore  AUTHORS  CONTRIBUTING  INSTALL  Makefile.am  README  README.md  TODO  autopollconf.h  configure.ac  crypto.c  crypto.h
docs/: Doxyfile.in  INITIAL_THOUGHTS.tex  Makefile.am  README  RFC_draft.tex
docs/slides/: a_ring_of_trust_forms.odp  network_of_trust.odp  secure_communications.odp
src/: Makefile.am  arg.c  arg.h  callback.c  callback.h  client.c  config.h  connection.c  connection.h  context.c  context.h  db.c  db.h  debug.h  error.h  helper.c  helper.h  identity.c  identity.h  init.c  init.h  interpretersample.c  keys.c  keys.h  log.c  log.h  ncot.c  ncot.h  ncotclient.c  ncotd.c  ncotpoll.c  node.c  node.h  packet.c  packet.h  peernode.h  policy.c  policy.h  protocol.h  ring.c  (+18 more)
tests/: Makefile.am  check_clanguage.c  check_connection  check_connection.c  check_context.c  check_db.c  check_helper.c  check_keys.c  check_ncot.c  check_node  check_node.c  check_packet.c  check_policy.c  check_ring.c  check_shell  check_shell.c  client.c  config.h  context.json  nodes.json  server.c  ssh2client.c  ssh2server.c  tcpserver  tcpserver.c
tests/.ncot/: README  nodes.json
tests/.ncot/063c5ec6-28f2-11ea-b563-0015f2f34329/: id_ecdsa_p256  id_ecdsa_p256.pub  id_ed25519  id_ed25519.pub
